# PodShift

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  activate.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
docs/api/: configuration-options.md  output-formats.md  script-reference.md
docs/installation/: installation-guide.md  system-requirements.md  troubleshooting-installation.md
docs/migration-guide/: best-practices.md  discovery-process.md  migration-planning.md  quick-start.md
docs/troubleshooting/: common-issues.md  docker-connectivity.md  m1-compatibility.md
scripts/discovery/: dependency_mapper.py  discover_containers.sh  docker_inventory.py  system_resources.sh
